<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".reports.ReviewOrder">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rel_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:src="@drawable/ic_back"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <TextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@+id/iv_back"
                android:gravity="center_vertical"
                android:padding="10dp"
                android:text="@string/reviewOrder"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_yourClothes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_header"
            android:padding="5dp"
            android:text="@string/yourClothes"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/ll_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_yourClothes"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="6">

            <TextView
                android:id="@+id/tv_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/clothQty1"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/multiply"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_clothType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tshirt"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/type"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/service"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textSize="17sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_addMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_order"
            android:gravity="center"
            android:text="@string/addMore"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_addMore"
            android:layout_above="@+id/btn_submit"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_subTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/subTotal"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_subTotalRs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="@string/subTotalRs"
                    android:textSize="17sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_tax"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tax"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_taxRs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="@string/taxRs"
                    android:textSize="17sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_payableAmt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/payableAmt"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/tv_payableAmtRs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:text="@string/payableAmtRs"
                    android:textSize="17sp" />

            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_register"
            android:padding="10dp"
            android:text="@string/submit"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>