<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="20sp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_login"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register_otp"
            android:textColor="@color/colorBlue"
            android:textSize="20sp" />

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:padding="10dp"
            android:gravity="center"
            android:hint="@string/OTP_register" />

        <Button
            android:id="@+id/btn_register_popup_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/shape_register"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_register_popup_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_register"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>