<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressSelection">

    <RelativeLayout
        android:id="@+id/rel_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:src="@drawable/ic_back"
            tools:ignore="ContentDescription,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="65dp"
            android:layout_toEndOf="@+id/iv_back"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/selectAddress"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_enterAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_header"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/addAddress"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_enterAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_enterAddress"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/shape_login"
        android:hint="@string/enterAddress"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="15dp"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded,RtlSymmetry" />

    <TextView
        android:id="@+id/tv_enterAddressOnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_enterAddress"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/selectAddressOnMap"
        android:textSize="18sp" />

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_book_pickup"
        android:layout_below="@+id/tv_enterAddressOnMap"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/btn_book_pickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_register"
        android:text="@string/book_pickup"
        android:textColor="@color/colorWhite"
        android:textStyle="bold" />
</RelativeLayout>